--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ under the License.
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>in.olaeletric.test</groupId>
+	<groupId>in.flink.test</groupId>
 	<artifactId>flink-learning</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -154,7 +154,7 @@ under the License.
 							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>in.olaelectric.test.StreamingJob</mainClass>
+									<mainClass>in.flink.test.StreamingJob</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
